name:          hyperloglog
category:      Numeric
version:       0.99
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/hyperloglog
bug-reports:   http://github.com/analytics/hyperloglog/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
synopsis:      An approximate streaming (constant space) unique object counter
description:
  This package provides an approximate streaming (constant space) unique object counter.
  .
  See the original paper for details:
  <http://algo.inria.fr/flajolet/Publications/FlFuGaMe07.pdf>
  .
  Notably it can be used to approximate a set of several billion elements with 1-2% inaccuracy
  in around 1.5k of memory.

library
  build-depends: base
               , bits
               , bytes
               , memory
               , reflection
               , semigroups
               , vector

  exposed-modules:  Data.HyperLogLog

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
